# pdf_tchotchke

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
examples/bookmarks/: bkmk_import.txt  sample1.txt
pdf/: .gitignore  README.md  bkmk.py  filenames.py  interleave.py  remover.py  sample.txt  sample0.txt  sample1.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt  sample6.txt
pdf/bookmarks/: README.md  bkmk.py  interleave.py
pdf/redaction/: redact.py  remover.py
pdf_tchotchke/: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
pdf_tchotchke/bookmarks/: README.md
pdf_tchotchke/examples/bookmarks/: README.md  bkmk_import_edit.txt  import.txt  sample.txt
pdf_tchotchke/examples/redaction/: README.md
pdf_tchotchke/pdf_tchotchke/bookmarks/: bkmk.py  interleave.py
pdf_tchotchke/pdf_tchotchke/redaction/: README.md  editor.py  prepare.py  redact.py  whiteout.py  whiteout_re.py
pdf_tchotchke/pdf_tchotchke/utils/: filenames.py
pdf_tchotchke/redaction/: dobjects.py  editor.py  iobjects.py  parser.py  patterns.py  prepare.py  redactor.py  whiteout.py  xrefs.py
pdf_tchotchke/src/bookmarks/: __init__.py  bkmk.py  interleave.py
pdf_tchotchke/src/redaction/: README.md  __init__.py  decoder.py  preparePDF.sh  redact.py
pdf_tchotchke/src/utils/: filenames.py
