# Read how to use this file here:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# Also (older) it's a trap
# https://docs.python.org/3.9/distutils/configfile.html
# $ python3 setup.py --help-commands

[metadata]
name = pdf-tchotchke
version = 0.0
author = Lorenzo X. Van Muñoz
author_email = lorenzo@vanmunoz.com
description = PDF bookmark and redaction tools
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lord-zo/pdf_tchotchke
Bug Tracker = https://github.com/lord-zo/pdf_tchotchke/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7.3
install_requires = 
    pdftotext

[options.entry_points]
console_scripts =
	bkmk = pdf_tchotchke.bookmarks.bkmk:cli
	interleave = pdf_tchotchke.bookmarks.interleave:cli
	redact = pdf_tchotchke.redaction.redact:cli
	whiteout = pdf_tchotchke.redaction.whiteout:cli
	whiteout_re = pdf_tchotchke.redaction.whiteout_re:cli
	prepare = pdf_tchotchke.redaction.prepare:cli
